--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
   "scripts": {
     "clean": "rm -rf dist/",
-    "build": "webpack --mode production",
-    "test": "jest"
+    "build": "webpack --mode production"
+  },
+  "dependencies": {
+    "structured-xlsx-parser": "git+https://github.com/comame/Structured-XLSX-Parser.git"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-typescript": "^7.12.1",
-    "@types/jest": "^26.0.15",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "babel-jest": "^26.6.0",
+    "@types/react": "^16.14.5",
+    "@types/react-dom": "^16.9.12",
     "css-loader": "^3.6.0",
-    "file-loader": "^6.1.1",
-    "jest": "^26.6.0",
-    "node-sass": "^4.14.1",
+    "file-loader": "^6.2.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "sass": "^1.32.8",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.3.0",
     "ts-loader": "^7.0.5",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.2",
+    "typescript": "^3.9.9",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   }
 }
